# endstone-easycheckupdate

./: .gitignore  README.md  README_EN.md  build-dev.ps1  build-whl.ps1  pyproject.toml  setup.py  update_versions.json
src/endstone_easycheckupdate/: __init__.py  bstats.py  easycheckupdate_plugin.py
